--- a/.github/workflows/client-angular.yaml
+++ b/.github/workflows/client-angular.yaml
@@ -18,9 +18,9 @@ jobs:
           ${{ runner.os }}-node-
 
     - name: Use Node.js 14
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
-        node-version: 14
+        node-version: '14'
 
     - name: Install dependencies (npm ci)
       run: npm ci
@@ -45,10 +45,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
 
-    - name: Use Node.js 14.x
-      uses: actions/setup-node@v1
+    - name: Use Node.js 14
+      uses: actions/setup-node@v2
       with:
-        node-version: 14.x
+        node-version: '14'
 
     - name: Install dependencies (npm ci)
       run: npm ci
