Add comment about .gitignore node files

--- a/.gitignore
+++ b/.gitignore
@@ -165,6 +165,8 @@ $RECYCLE.BIN/
 
 .settings/
 
-node_modules
+# We ignore node files at the top level to prevent committing
+# them when accidentally created by running npm commands at the root
+node_modules/
 package-lock.json
 package.json
