--- a/server/build.gradle
+++ b/server/build.gradle
@@ -19,9 +19,9 @@ java {
 
 // In this section you declare where to find the dependencies of your project
 repositories {
-  // Use jcenter for resolving your dependencies.
+  // Use Maven Central for resolving your dependencies.
   // You can declare any Maven/Ivy/file repository here.
-  jcenter()
+  mavenCentral()
 }
 
 // The class where our server is located
