--- a/client/package.json
+++ b/client/package.json
@@ -30,11 +30,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.1",
-    "@angular-eslint/builder": "13.0.1",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/builder": "^2.0.0",
+    "@angular-eslint/eslint-plugin": "^2.0.0",
+    "@angular-eslint/eslint-plugin-template": "^2.0.0",
     "@angular-eslint/schematics": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
+    "@angular-eslint/template-parser": "^2.0.0",
     "@angular/cli": "~13.2.1",
     "@angular/compiler-cli": "~13.2.1",
     "@angular/language-service": "~13.2.1",
@@ -43,8 +43,8 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
     "cypress": "^6.4.0",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.25.4",
