--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -16,6 +16,7 @@
         "createDefaultProgram": true
       },
       "extends": [
+        "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/ng-cli-compat",
         "plugin:@angular-eslint/ng-cli-compat--formatting-add-on",
         "plugin:@angular-eslint/template/process-inline-templates"
