--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -23,7 +24,6 @@
     "@angular/platform-browser": "~13.2.1",
     "@angular/platform-browser-dynamic": "~13.2.1",
     "@angular/router": "~13.2.1",
-    "karma-coverage": "^2.1.0",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -31,10 +31,10 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.1",
     "@angular-eslint/builder": "^12.0.0",
-    "@angular-eslint/eslint-plugin": "^12.0.0",
-    "@angular-eslint/eslint-plugin-template": "^12.0.0",
+    "@angular-eslint/eslint-plugin": "^13.0.1",
+    "@angular-eslint/eslint-plugin-template": "^13.0.1",
     "@angular-eslint/schematics": "13.0.1",
-    "@angular-eslint/template-parser": "^12.0.0",
+    "@angular-eslint/template-parser": "^13.0.1",
     "@angular/cli": "~13.2.1",
     "@angular/compiler-cli": "~13.2.1",
     "@angular/language-service": "~13.2.1",
@@ -54,7 +54,7 @@
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.13",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "^2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.3",
     "ts-node": "~8.3.0",
