--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^12.11.1",
+    "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "@typescript-eslint/parser": "5.3.0",
     "cypress": "^9.4.1",
