Add Checkstyle and fix various warnings
This adds Checkstyle and fixes all the *many* warnings that generated. I've also started dealing with several SonarLint warnings as well, but they're not all done.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,9 +11,10 @@
       "html"
     ],
     "cSpell.words": [
-        "CSCI",
-        "sidenav",
-        "todos"
+      "CSCI",
+      "Javalin",
+      "sidenav",
+      "todos"
     ],
     "angular.enable-experimental-ivy-prompt": false,
 }
