Allow `function` for top-level definitions
@helloworld12321 and I spent way too long wrestling with an `ng lint` problem with a top level function definition in `user-list.component.spec.ts` that used an explicit `function` instead of the arrow syntax.

I think this is a fairly minimal change to the ESLint config that allows us to have this top-level function definition.

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -45,6 +45,12 @@
               "_id"
             ]
           }
+        ],
+        "prefer-arrow/prefer-arrow-functions": [
+          "error",
+          {
+            "allowStandaloneDeclarations": true
+          }
         ]
       }
     },
