Improve the commenting in the client
This attempts to improve the commenting in the client, as well as fixing a few formatting issues.

I've also added a few words to the project spelling dictionary.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,16 @@
       "html"
     ],
     "cSpell.words": [
+      "Chainable",
       "CSCI",
+      "DATAGENE",
+      "jacoco",
       "Javalin",
+      "KINETICUT",
+      "LABTASKS",
+      "MOMENTIA",
+      "OHMNET",
+      "routerlink",
       "sidenav",
       "todos"
     ],
