--- a/client/cypress/tsconfig.json
+++ b/client/cypress/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../out-tsc/e2e",
     "types": [
       "cypress",
       "node"
-    ]
+    ],
+    "sourceMap": false
   },
   "include": [
     "**/*.ts"
