--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -7,23 +7,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Cache Gradle artifacts (downloaded JARs, the wrapper, and any downloaded JDKs)
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-          ~/.gradle/jdks
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/.gradle/') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
+      uses: actions/setup-node@v3
 
     - name: Use Node.js 18
       uses: actions/setup-node@v3
       with:
         node-version: 18
+        cache: 'npm'
 
     - name: Run e2e tests
       uses: cypress-io/github-action@v2
