--- a/.github/workflows/client-angular.yaml
+++ b/.github/workflows/client-angular.yaml
@@ -11,6 +11,11 @@ jobs:
 
     - name: Cache node modules
       uses: actions/setup-node@v3
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
 
     - name: Use Node.js 18
       uses: actions/setup-node@v3
@@ -34,7 +39,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Cache node modules
-      uses: actions/setup-node@v3
+      uses: actions/cache@v3
       with:
         path: ~/.npm
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
@@ -45,6 +50,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 18
+        cache: 'npm'
 
     - name: Install dependencies (npm ci)
       run: npm ci
