--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Cache Gradle artifacts (downloaded JARs, the wrapper, and any downloaded JDKs)
-      uses: actions/setup-node@v3
+      uses: actions/cache@v2
       with:
         path: |
           ~/.gradle/caches
