--- a/.github/workflows/client-angular.yaml
+++ b/.github/workflows/client-angular.yaml
@@ -11,7 +11,7 @@ jobs:
     - name: Use Node.js 18
       uses: actions/setup-node@v3
       with:
-        node-version: 18
+        node-version: '18'
         cache: 'npm'
 
     - name: Install dependencies (npm ci)
@@ -32,7 +32,7 @@ jobs:
     - name: Use Node.js 18
       uses: actions/setup-node@v3
       with:
-        node-version: 18
+        node-version: '18'
         cache: 'npm'
 
     - name: Install dependencies (npm ci)
