--- a/.github/workflows/client-angular.yaml
+++ b/.github/workflows/client-angular.yaml
@@ -9,6 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js 18
+      working-directory: ./client
       uses: actions/setup-node@v3
       with:
         node-version: '18'
@@ -31,6 +32,7 @@ jobs:
 
     - name: Use Node.js 18
       uses: actions/setup-node@v3
+      working-directory: ./client
       with:
         node-version: '18'
         cache: 'npm'
