--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -25,6 +25,7 @@ jobs:
       with:
         node-version: '18'
         cache: 'npm'
+        cache-directory-path: ./client/package-lock.json
 
     - name: Run e2e tests
       uses: cypress-io/github-action@v2
