--- a/.github/workflows/client-angular.yaml
+++ b/.github/workflows/client-angular.yaml
@@ -14,7 +14,7 @@ jobs:
       with:
         node-version: '18'
         cache: 'npm'
-        cache-directory-path: ./client/package-lock.json
+        cache-dependency-path: ./client/package-lock.json
 
     - name: Install dependencies (npm ci)
       run: npm ci
@@ -37,7 +37,7 @@ jobs:
       with:
         node-version: '18'
         cache: 'npm'
-        cache-directory-path: ./client/package-lock.json
+        cache-dependency-path: ./client/package-lock.json
 
     - name: Install dependencies (npm ci)
       run: npm ci
