--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,7 @@
     "@angular/language-service": "~13.2.1",
     "@nrwl/cypress": "^13.7.2",
     "@nrwl/workspace": "^13.7.3",
-    "@types/jasmine": "~3.10.3",
+    "@types/jasmine": "^4.3.1",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "5.10.2",
@@ -49,13 +49,13 @@
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsdoc": "37.7.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~4.5.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.13",
+    "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "ts-node": "~10.4.0",
     "typescript": "~4.5.5"
   }
