Fix inconsistencies between labs and iteration template
This commit addresses some inconsistencies between labs and the iteration template or fixes other minor things

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -37,19 +37,19 @@ dependencies {
   implementation 'io.javalin:javalin:5.3.2'
 
   // Jackson, a JSON library for Java
-  implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
 
   // Simple Logging Facade for Java
   implementation 'org.slf4j:slf4j-simple:2.0.6'
 
   // JUnit Jupiter API for testing.
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
 
   // JUnit Jupiter Engine for testing.
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 
   // Mockito for testing
-  testImplementation 'org.mockito:mockito-core:4.3.1'
+  testImplementation 'org.mockito:mockito-core:5.1.1'
 }
 
 application {
@@ -60,22 +60,39 @@ application {
 test {
   // Use junit platform for unit tests
   useJUnitPlatform()
-}
 
-wrapper {
-  distributionType = Wrapper.DistributionType.ALL
+  // After running the tests, generate a coverage report
+  finalizedBy jacocoTestReport
+
 }
 
 jacocoTestReport {
+    // Running the test report task automatically runs test first
+  dependsOn test
+
   reports {
     // This isn't strictly necessary, but the default reports
     // location is buried pretty deep in the build directory,
     // so this makes it easier to find.
     html.destination file("${buildDir}/jacocoHtml")
   }
+
+  afterEvaluate {
+    // This excludes the `Server` class from the coverage report. We don't
+    // have any good way to test the `Server` class directory (we'd have
+    // to somehow fake incoming HTTP requests), so we are just
+    // leaving it out of the coverage report and the coverage limits.
+    classDirectories.setFrom(files(classDirectories.files.collect {
+      fileTree(dir: it, exclude: 'umm3601/Server.class')
+    }))
+  }
 }
 
 tasks.withType(JavaCompile) {
   // All of our source files are written in UTF-8.
   options.encoding = 'UTF-8'
+}
+
+wrapper {
+  distributionType = Wrapper.DistributionType.ALL
 }
