--- a/client/angular.json
+++ b/client/angular.json
@@ -120,10 +120,8 @@
           }
         },
         "e2e": {
-          "builder": "@nrwl/cypress:cypress",
+          "builder": "@cypress/schematic:cypress",
           "options": {
-            "cypressConfig": "cypress.json",
-            "tsConfig": "cypress/tsconfig.json",
             "devServerTarget": "client:serve"
           },
           "configurations": {
@@ -135,7 +133,6 @@
       }
     }
   },
-  "defaultProject": "client",
   "cli": {
     "analytics": false
   }
