--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,7 @@ $RECYCLE.BIN/
 # Aditional custom ignores
 
 .settings/
+.env
 
 # We ignore node files at the top level to prevent committing
 # them when accidentally created by running npm commands at the root
