--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -1,16 +1,17 @@
 name: End-to-End
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   ng-e2e:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
     - name: Cache Gradle artifacts (downloaded JARs, the wrapper, and any downloaded JDKs)
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: |
           ~/.gradle/caches
@@ -21,14 +22,14 @@ jobs:
           ${{ runner.os }}-gradle-
 
     - name: Use Node.js 18
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: 18
         cache: 'npm'
         cache-dependency-path: ./client/package-lock.json
 
     - name: Run e2e tests
-      uses: cypress-io/github-action@v5
+      uses: cypress-io/github-action@v6
       with:
         start: ${{ github.workspace }}/server/gradlew run -p ${{ github.workspace }}/server/
         command: npm run e2e
