--- a/.github/workflows/server-gradle.yml
+++ b/.github/workflows/server-gradle.yml
@@ -1,16 +1,17 @@
-name: Server Java
+name: Server
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   gradle-build:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout the repository
-      uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
     - name: Cache Gradle artifacts (downloaded JARs, the wrapper, and any downloaded JDKs)
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: |
           ~/.gradle/caches
