Factor out `Main` and get coverage to 100%
This factors the "main" logic out of `Server.java` and into `Main.java`. I also got the test coverage up to 100%.

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -53,7 +53,7 @@ dependencies {
 
 application {
   // Define the main class for the application
-  mainClass = 'umm3601.Server'
+  mainClass = 'umm3601.Main'
 }
 
 test {
