--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "^17.1.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
-    "zone.js": "~0.14.3"
+    "zone.js": "^0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1701.2",
@@ -37,18 +37,18 @@
     "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "^17.1.2",
     "@angular/language-service": "^17.1.2",
-    "@cypress/schematic": "^2.1.1",
+    "@cypress/schematic": "^2.5.1",
     "@floogulinc/cypress-mongo-seeder": "^1.1.1",
     "@types/jasmine": "^5.1.4",
     "@types/node": "^20.11.16",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "eslint": "^8.53.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "cypress": "^13.6.4",
+    "eslint": "^8.56.0",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsdoc": "^48.0.4",
+    "eslint-plugin-jsdoc": "^48.0.5",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "^4.6.0",
+    "jasmine-core": "^5.1.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
